--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@apollo/client": "^3.13.8",
+    "@heroicons/react": "^2.0.13",
     "@supabase/supabase-js": "^2.57.4",
     "@types/react-router-dom": "^5.3.3",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.9.1"
+    "react-router-dom": "^7.9.1",
+    "axios": "^1.6.8",
+    "chart.js": "^4.5.0",
+    "react-chartjs-2": "^5.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
